# lazyshell

./: CHANGELOG.md  README.md  pyproject.toml  requirements.md
src/lazy_shell/: core.py
src/lazyshell/: __init__.py  core.py
tests/: conftest.py  test_lazy_shell.py  test_lazyshell.py
tests/manual/: manual_tests.py
