[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "lazy_shell"
version = "0.1.0"
authors = [{name = "Lazy Shell"}]
description = "Lazy optional imports"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.9"

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
